# shellai

./: .gitignore  config.yaml  hello.py  models.py  pipeline.py  pyproject.toml  submission.csv  tabm_pipeline.py
